--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,5 +58,12 @@
         android:layout_below="@id/wifi_btn"
         android:text="@string/leancloud"/>
 
+    <Button
+        android:id="@+id/mvc_test_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/wifi_btn"
+        android:text="@string/mvc_test"/>
+
 
 </RelativeLayout>
