--- a/app/src/main/res/layout/activity_touch_event.xml
+++ b/app/src/main/res/layout/activity_touch_event.xml
@@ -7,21 +7,26 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <app.example.com.mydemo.myview.TouchEventChilds
-        android:id="@+id/childs"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+    <!--<app.example.com.mydemo.myview.TouchEventChilds-->
+        <!--android:id="@+id/childs"-->
+        <!--android:layout_width="300dp"-->
+        <!--android:layout_height="300dp"-->
+        <!--android:layout_gravity="center"-->
+        <!--android:background="#E1110D"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:text="@string/hello_world">-->
+
+        <!---->
+
+    <!--</app.example.com.mydemo.myview.TouchEventChilds>-->
+
+
+
+    <app.example.com.mydemo.myview.MyTextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="#E1110D"
-        android:orientation="horizontal"
-        android:text="@string/hello_world">
-
-        <app.example.com.mydemo.myview.MyTextView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:background="@color/black" />
-
-    </app.example.com.mydemo.myview.TouchEventChilds>
-
+        android:gravity="center"
+        android:background="@drawable/textview_border"
+        android:text="@string/app_name"/>
 </app.example.com.mydemo.myview.TouchEventFather>
