--- a/app/src/main/res/layout/activity_touch_event.xml
+++ b/app/src/main/res/layout/activity_touch_event.xml
@@ -23,8 +23,8 @@
 
 
     <app.example.com.mydemo.myview.MyTextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:background="@drawable/textview_border"
