--- a/app/src/main/res/layout/activity_large_image_view.xml
+++ b/app/src/main/res/layout/activity_large_image_view.xml
@@ -8,4 +8,10 @@
         android:layout_width="200dp"
         android:layout_height="200dp" />
 
+    <app.example.com.mydemo.bitmap.LargeImageView
+        android:id="@+id/id_my_largeimage"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
