--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,13 @@
                 android:layout_below="@id/collapsing_test_btn"
                 android:text="@string/bitmap_load"/>
 
+            <Button
+                android:id="@+id/rxjava_test_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/bitmap_test_btn"
+                android:text="@string/rxjava"/>
+
         </RelativeLayout>
 
     </ScrollView>
