--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,6 +101,13 @@
                 android:layout_below="@id/bitmap_test_btn"
                 android:text="@string/rxjava"/>
 
+            <Button
+                android:id="@+id/retrofit_test_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/rxjava_test_btn"
+                android:text="@string/retrofix"/>
+
         </RelativeLayout>
 
     </ScrollView>
