--- a/app/src/main/res/layout/activity_retrofit.xml
+++ b/app/src/main/res/layout/activity_retrofit.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/retrofit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <Button
+        android:layout_width="@dimen/test_width"
+        android:layout_height="@dimen/test_height" />
 
 </LinearLayout>
