--- a/app/src/main/res/layout/my_view.xml
+++ b/app/src/main/res/layout/my_view.xml
@@ -23,8 +23,14 @@
         app:lineColor="@color/blue"/>
 
     <app.example.com.mydemo.myview.MySlackLoadingView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/slack_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_below="@id/arc_view"/>
+
+    <app.example.com.mydemo.myview.LoadingView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_below="@id/slack_view"/>
 
 </RelativeLayout>
