--- a/app/src/main/res/layout/my_view.xml
+++ b/app/src/main/res/layout/my_view.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:id="@+id/rl">
 
     <app.example.com.mydemo.myview.MyWaveView
         android:id="@+id/wave_view"
