--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
                 android:id="@+id/contact_btn"
                 android:text="@string/contact_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:background="@drawable/btn_shape"/>
 
             <Button
                 android:id="@+id/video_btn"
@@ -108,6 +109,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/rxjava_test_btn"
                 android:text="@string/retrofix"/>
+
+            <Button
+                android:id="@+id/map_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/retrofit_test_btn"
+                android:text="@string/baidumap"/>
 
         </RelativeLayout>
 
