--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/contact_btn"
                 android:text="@string/contact_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/btn_shape"/>
+                android:layout_height="wrap_content"/>
 
             <Button
                 android:id="@+id/video_btn"
